--- a/test.html
+++ b/test.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<script crossorigin="anonymous" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+		<script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"></script>
+		<script integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
 		<meta charset="utf-8">
-		<meta content="width=device-width" initial-scale="1.0" name="viewport">
-		<title>
-			Untitled Calamity Site
-		</title>
+		<meta name="viewport" content="width=device-width" initial-scale="1.0">
+		<title>Untitled Calamity Site</title>
 	</head>
-	<body>
-		Test
+	<body class="container">
+		<div class="row">Titlebar and additional information</div>
+		<div class="row">
+			<div class="col">Column 1</div>
+			<div class="col">Column 2</div>
+			<div class="col">Column 3</div>
+		</div>
+		<div class="row">Footer and additional information</div>
 	</body>
 </html>
